[gd_scene load_steps=9 format=3 uid="uid://bj72qgldgp41l"]

[ext_resource type="Script" path="res://scripts/effects/area_damage_effect.gd" id="1_yjr2t"]

[sub_resource type="Gradient" id="Gradient_lfxnq"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.8, 0.2, 0.2, 1, 0.8, 0.2, 0.2, 0.8, 0.8, 0.2, 0.2, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ixvs3"]
gradient = SubResource("Gradient_lfxnq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uxdnj"]
emission_shape = 1
emission_sphere_radius = 50.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 5.0
scale_curve = null
color = Color(0.8, 0.2, 0.2, 0.8)
color_ramp = SubResource("GradientTexture1D_ixvs3")

[sub_resource type="Gradient" id="Gradient_wave"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0.4, 0.4, 1, 1, 0.4, 0.4, 0.5, 1, 0.4, 0.4, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_wave"]
gradient = SubResource("Gradient_wave")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wave"]
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 150.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 10.0
scale_max = 20.0
scale_curve = null
color = Color(1, 0.4, 0.4, 0.5)
color_ramp = SubResource("GradientTexture1D_wave")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_impact"]
emission_shape = 1
emission_sphere_radius = 80.0
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 98, 0)
initial_velocity_min = 20.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 4.0
scale_curve = null
color = Color(0.6, 0.1, 0.1, 0.8)
color_ramp = SubResource("GradientTexture1D_ixvs3")

[node name="AreaDamageEffect" type="Node2D"]
script = ExtResource("1_yjr2t")

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_uxdnj")
lifetime = 0.8
one_shot = true
explosiveness = 0.8

[node name="WaveParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_wave")
lifetime = 0.6
one_shot = true
explosiveness = 1.0

[node name="ImpactParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_impact")
lifetime = 1.0
one_shot = true
explosiveness = 0.6
